--- a/HopIn/src/index.html
+++ b/HopIn/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://kit.fontawesome.com/d6992b8386.js" crossorigin="anonymous"></script>
   <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css" rel="stylesheet">-->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADf7wmEupGmb08OGVJR1eNhvtvF6KYuiM&libraries=places&libraries=geometry&language=en"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADf7wmEupGmb08OGVJR1eNhvtvF6KYuiM&libraries=places,geometry&language=en"></script>
 </head>
 <body>
   <app-root></app-root>
